tests/scan/fixtures/validation/negative/clean_go_clean-auth-handler/go.mod
module github.com/example/clean-auth-handler
go 1.21
